--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
 				</div>
 			</form>
 			<div class="weather-card">
-				<div class="city">CDMX</div>
-				<div class="date">30/07/2021</div>
+				<div class="city" id="city">Guadalajara</div>
+				<div class="date" id="date">30/07/2021</div>
 				<div class="temperature">
 					<img
 						src="./images/thermometer.svg"
 						class="temp-image"
+						id="temp-image"
 						alt="icono de temperatura"
 						title="icono de temperatura"
 					/>
-					<div class="temp">14c°</div>
+					<div class="temp" id="temp">14c°</div>
 				</div>
-				<div class="weather">Nublado</div>
-				<div class="range">13c° / 20c°</div>
+				<div class="weather" id="weather">Nublado</div>
+				<div class="range" id="range">13c° / 20c°</div>
 			</div>
 		</main>
 		<footer class="footer">
@@ -90,5 +91,6 @@
 				></a>
 			</div>
 		</footer>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
