--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 					/>
 				</div>
 			</form>
-			<div class="weather-card">
+			<div class="weather-card" id="card">
 				<div class="city" id="city">Guadalajara</div>
 				<div class="date" id="date">30/07/2021</div>
 				<div class="temperature">
 					<img
 						src="./images/thermometer.svg"
-						class="temp-image"
-						id="temp-image"
+						class="temp-img"
+						id="temp-img"
 						alt="icono de temperatura"
 						title="icono de temperatura"
 					/>
-					<div class="temp" id="temp">14c°</div>
+					<div class="temp" id="temp">14</div>
 				</div>
 				<div class="weather" id="weather">Nublado</div>
-				<div class="range" id="range">13c° / 20c°</div>
+				<div class="range" id="range">13 / 20</div>
 			</div>
 		</main>
 		<footer class="footer">
